@@ -1,3 +1,9 @@
+218
+
+- Fail decoding with JsonCodec when content is not single JSON value.
+  Previously the codec decoded first JSON value only, ignoring the rest
+  of the payload.
+
 217
 
 - Auto detect records for Jackson serialization
